// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrBanner renders a right-icon 1`] = `
<div
  class="cdr-banner cdr-banner--warning"
>
  <div
    class="cdr-banner__wrapper"
  >
    <div
      class="cdr-banner__main cdr-banner__main--warning cdr-banner__main--no-msg"
    >
      <div
        class="cdr-banner__icon-left cdr-banner__icon-left--warning"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
      <span
        class="cdr-banner__message"
      >
        hey im a banner
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`CdrBanner renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--info"
>
  <div
    class="cdr-banner__wrapper"
  >
    <div
      class="cdr-banner__main cdr-banner__main--info cdr-banner__main--no-msg"
    >
      <div
        class="cdr-banner__icon-left cdr-banner__icon-left--info"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
      <span
        class="cdr-banner__message"
      >
        hey im a banner
      </span>
    </div>
  </div>
</div>
`;

exports[`CdrBanner renders the info-action slot 1`] = `
<div
  class="cdr-banner cdr-banner--warning"
>
  <div
    class="cdr-banner__wrapper"
  >
    <div
      class="cdr-banner__main cdr-banner__main--warning cdr-banner__main--no-msg"
    >
      <div
        class="cdr-banner__icon-left cdr-banner__icon-left--warning"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
      <span
        class="cdr-banner__message"
      >
        hey im a banner
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="cdr-banner__info-action"
  >
    <svg
      aria-hidden="true"
      class="cdr-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
        role="presentation"
      />
    </svg>
  </div>
</div>
`;

exports[`CdrBanner renders the message-body slot 1`] = `
<div
  class="cdr-banner cdr-banner--success"
>
  <div
    class="cdr-banner__wrapper cdr-banner__wrapper--prominence"
  >
    <div
      class="cdr-banner__main cdr-banner__main--success"
    >
      <div
        class="cdr-banner__icon-left cdr-banner__icon-left--success"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm4.77-13.357a1 1 0 10-1.533-1.286l-5.95 7.083-1.52-1.817a1 1 0 00-1.533 1.285l2.227 2.66a.999.999 0 001.565.1l6.743-8.025z"
            role="presentation"
          />
        </svg>
      </div>
      <span
        class="cdr-banner__message"
      >
        hey im a banner
      </span>
    </div>
    <div
      class="cdr-banner__message-body"
    >
      and I am some extra information
    </div>
  </div>
</div>
`;
